--- a/today.html
+++ b/today.html
@@ -7,7 +7,9 @@
   <link rel="stylesheet" href="style.css">
   <script src="script.js" defer></script>
   <!-- Font Awesome CSS -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
   <!-- Particles.js Script -->
   <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 
@@ -19,33 +21,14 @@
       left: 0;
       width: 100%;
       height: 100%;
-      z-index: -1;
+      z-index: -1;  /* Make sure particles are behind the content */
     }
 
     /* Content styling to ensure visibility */
     .content {
       position: relative;
-      z-index: 1;
+      z-index: 1;  /* Content should appear above particles */
     }
-
-    /* Food results styling */
-    #foodResults {
-      margin-top: 20px;
-    }
-
-    .food-result {
-      border: 1px solid #ddd;
-      padding: 15px;
-      margin-bottom: 10px;
-      border-radius: 5px;
-    }
-
-    .food-result img {
-      max-width: 150px;
-      height: auto;
-      margin-top: 10px;
-    }
-
   </style>
 </head>
 <body>
@@ -53,12 +36,41 @@
   <div id="particles-js"></div>
 
   <nav class="tabbar">
-    <a class="tab-link" href="today.html">Today</a>
-    <a class="tab-link" href="week.html">Week</a>
-    <a class="tab-link" href="exercises.html">Exercises</a>
-    <a class="tab-link" href="stats.html">Stats</a>
-    <a class="tab-link" href="achievements.html">Achievements</a>
-    <a class="tab-link" href="settings.html">Settings</a>
+    <a class="tab-link" href="today.html">
+      <svg xmlns="http://www.w3.org/2000/svg" class="icon" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17.657 18.657A8 8 0 016.343 7.343S7 9 9 10c0-2 .5-5 2.986-7C14 5 16.09 5.777 17.656 7.343A7.975 7.975 0 0120 13a7.975 7.975 0 01-2.343 5.657z"></path>
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9.879 16.121A3 3 0 1012.015 11L11 14H9c0 .768.293 1.536.879 2.121z"></path>
+      </svg>
+      <span>Today</span>
+    </a>
+    <a class="tab-link" href="week.html">
+      <svg xmlns="http://www.w3.org/2000/svg" class="icon" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"></path>
+      </svg>
+      <span>Week</span>
+    </a>
+    <a class="tab-link" href="exercises.html">
+      <svg xmlns="http://www.w3.org/2000/svg" class="icon" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 11H5m14 0a2 2 0 012 2v6a2 2 0 01-2 2H5a2 2 0 01-2-2v-6a2 2 0 012-2m14 0V9a2 2 0 00-2-2M5 11V9a2 2 0 012-2m0 0V5a2 2 0 012-2h6a2 2 0 012 2v2M7 7h10"></path>
+      </svg>
+      <span>Exercises</span>
+    </a>
+    <a class="tab-link" href="stats.html">
+      <svg xmlns="http://www.w3.org/2000/svg" class="icon" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 0 01-2 2v14a2 2 0 01-2 2h-2a2-2 0 01-2-2z"></path>
+      </svg>
+      <span>Stats</span>
+    </a>
+    <a class="tab-link" href="achievements.html">
+      <img src="trophy.png" alt="Trophy Icon" class="trophy-icon">
+      <span>Achievements</span>
+    </a>
+    <a class="tab-link" href="settings.html">
+      <svg xmlns="http://www.w3.org/2000/svg" class="icon" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+        <path fill-rule="evenodd" fill="currentColor" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd"></path>
+      </svg>
+      <span>Settings</span>
+    </a>
   </nav>
 
   <div class="content">
@@ -82,22 +94,15 @@
             <label for="sleep">Sleep (Hours)</label>
             <input id="sleep" type="number" step="0.1">
           </div>
-        </div>
-        <button id="submit">Submit</button>
-      </section>
-
-      <!-- New Section for Food Search -->
-      <section>
-        <h2>Search Foods for Caloric Information</h2>
-        <div class="inputs">
           <div>
-            <label for="foodSearch">Enter Food Item</label>
-            <input id="foodSearch" type="text" placeholder="e.g., Apple">
+            <label for="food">Food Item (ID)</label>
+            <input id="food" type="number" placeholder="Enter ingredient ID">
           </div>
         </div>
-        <button id="searchFood">Search</button>
-        <div id="foodResults">
-          <!-- Food results will be displayed here -->
+        <button id="submit" onclick="logData()">Submit</button>
+        <div id="editSection" class="hidden">
+          <button id="cancelEdit" onclick="cancelEdit()">Cancel</button>
+          <button id="updateEntry" onclick="editRow()">Update</button>
         </div>
       </section>
 
@@ -111,7 +116,8 @@
               <th>Steps</th>
               <th>Water Intake (L)</th>
               <th>Sleep (Hours)</th>
-              <th>Food Log</th>
+              <th>Food</th>
+              <th>Delete</th>
             </tr>
           </thead>
           <tbody id="logsSection">
@@ -137,116 +143,119 @@
           "value": "#ffffff"
         },
         "shape": {
-          "type": "circle"
+          "type": "circle",
+          "stroke": {
+            "width": 0,
+            "color": "#000000"
+          },
+          "polygon": {
+            "nb_sides": 5
+          }
+        },
+        "opacity": {
+          "value": 0.5,
+          "random": false,
+          "anim": {
+            "enable": true,
+            "speed": 1,
+            "opacity_min": 0.1,
+            "sync": false
+          }
         },
         "size": {
           "value": 3,
-          "random": true
+          "random": true,
+          "anim": {
+            "enable": true,
+            "speed": 40,
+            "size_min": 0.1,
+            "sync": false
+          }
+        },
+        "line_linked": {
+          "enable": true,
+          "distance": 150,
+          "color": "#ffffff",
+          "opacity": 0.4,
+          "width": 1
         },
         "move": {
           "enable": true,
-          "speed": 2,
-          "direction": "none"
+          "speed": 6,
+          "direction": "none",
+          "random": false,
+          "straight": false,
+          "out_mode": "out",
+          "bounce": false,
+          "attract": {
+            "enable": false,
+            "rotateX": 600,
+            "rotateY": 1200
+          }
         }
-      }
+      },
+      "interactivity": {
+        "detect_on": "canvas",
+        "events": {
+          "onhover": {
+            "enable": true,
+            "mode": "repulse"
+          },
+          "onclick": {
+            "enable": true,
+            "mode": "push"
+          }
+        }
+      },
+      "retina_detect": true
     });
   </script>
 
-  <!-- JavaScript to handle Spoonacular API request -->
   <script>
-    const apiKey = 'b86ae26b7f844ead91ce96df1eb8df0c';  // Spoonacular API key
-
-    // Fetch food data based on the search query
-    async function fetchFoodId(foodItem) {
-      const url = `https://api.spoonacular.com/food/search?query=${foodItem}&apiKey=${apiKey}&number=1`;
+    // Fetch nutrient data from Spoonacular API
+    async function fetchNutrientInfo(ingredientId, nutrient, targetAmount, unit) {
+      const apiKey = 'b86ae26b7f844ead91ce96df1eb8df0c';
+      const url = `https://api.spoonacular.com/food/ingredients/${ingredientId}/amount?nutrient=${nutrient}&target=${targetAmount}&unit=${unit}&apiKey=${apiKey}`;
 
       try {
         const response = await fetch(url);
         const data = await response.json();
-
-        if (data.results && data.results.length > 0) {
-          return data.results[0].id;  // Return the ID of the first result
+        
+        if (data.nutrient) {
+          console.log(`Amount of ${data.nutrient.name}: ${data.nutrient.amount} ${data.nutrient.unit}`);
+          return data.nutrient; // Return the nutrient data
         } else {
-          return null;
+          console.error('Nutrient data not available');
         }
       } catch (error) {
-        console.error('Error fetching food data:', error);
-        return null;
+        console.error('Error fetching nutrient data:', error);
       }
     }
 
-    // Fetch detailed information based on the food ID
-    async function fetchFoodDetails(foodId) {
-      const url = `https://api.spoonacular.com/food/ingredients/${foodId}/information?apiKey=${apiKey}`;
+    // Function to log data
+    function logData() {
+      const steps = document.getElementById('steps').value;
+      const water = document.getElementById('water').value;
+      const sleep = document.getElementById('sleep').value;
+      const foodId = document.getElementById('food').value;
 
-      try {
-        const response = await fetch(url);
-        const data = await response.json();
-
-        return {
-          name: data.name,
-          calories: data.nutrition.nutrients[0].amount,  // Calories per serving
-          servingSize: data.nutrition.nutrients[0].unit,  // Unit of the serving
-          image: data.image,
-          description: data.description  // Optional description of the food
-        };
-      } catch (error) {
-        console.error('Error fetching food details:', error);
-        return null;
-      }
+      // Fetch protein content for the food item
+      fetchNutrientInfo(foodId, 'protein', 10, 'oz').then(nutrientData => {
+        if (nutrientData) {
+          const logContainer = document.getElementById('logsSection');
+          const newRow = document.createElement('tr');
+          newRow.innerHTML = `
+            <td>${new Date().toLocaleDateString()}</td>
+            <td>${steps}</td>
+            <td>${water}</td>
+            <td>${sleep}</td>
+            <td>Caloric Info: ${nutrientData.amount} ${nutrientData.unit} of ${nutrientData.name}</td>
+            <td><button>Delete</button></td>
+          `;
+          logContainer.appendChild(newRow);
+        }
+      });
     }
-
-    // Function to add food log entry to the table
-    function addFoodLogEntry(foodData) {
-      const logsSection = document.getElementById('logsSection');
-      const currentDate = new Date().toLocaleDateString();
-
-      const newRow = document.createElement('tr');
-      newRow.innerHTML = `
-        <td>${currentDate}</td>
-        <td>-</td>
-        <td>-</td>
-        <td>-</td>
-        <td>${foodData.name} - ${foodData.calories} kcal</td>
-      `;
-
-      logsSection.appendChild(newRow);
-    }
-
-    document.getElementById('searchFood').addEventListener('click', async () => {
-      const foodSearch = document.getElementById('foodSearch').value;
-      if (!foodSearch) {
-        alert('Please enter a food item.');
-        return;
-      }
-
-      const foodId = await fetchFoodId(foodSearch);
-      if (!foodId) {
-        alert('Food not found.');
-        return;
-      }
-
-      const foodData = await fetchFoodDetails(foodId);
-      const foodResultsContainer = document.getElementById('foodResults');
-      foodResultsContainer.innerHTML = '';  // Clear previous results
-
-      if (foodData) {
-        const foodResult = document.createElement('div');
-        foodResult.classList.add('food-result');
-        foodResult.innerHTML = `
-          <h3>${foodData.name}</h3>
-          <p><strong>Calories:</strong> ${foodData.calories} kcal per ${foodData.servingSize}</p>
-          <p><strong>Description:</strong> ${foodData.description || 'No description available.'}</p>
-          <img src="https://spoonacular.com/recipeImages/${foodData.image}" alt="${foodData.name}" />
-        `;
-        foodResultsContainer.appendChild(foodResult);
-
-        // Add to the food log as well
-        addFoodLogEntry(foodData);
-      } else {
-        foodResultsContainer.innerHTML = '<p>No detailed information found for the given food item.</p>';
-      }
-    });
   </script>
 </body>
 </html>
