--- a/today.html
+++ b/today.html
@@ -43,34 +43,7 @@
       </svg>
       <span>Today</span>
     </a>
-    <a class="tab-link" href="week.html">
-      <svg xmlns="http://www.w3.org/2000/svg" class="icon" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"></path>
-      </svg>
-      <span>Week</span>
-    </a>
-    <a class="tab-link" href="exercises.html">
-      <svg xmlns="http://www.w3.org/2000/svg" class="icon" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 11H5m14 0a2 2 0 012 2v6a2 2 0 01-2 2H5a2 2 0 01-2-2v-6a2 2 0 012-2m14 0V9a2 2 0 00-2-2M5 11V9a2 2 0 012-2m0 0V5a2 2 0 012-2h6a2 2 0 012 2v2M7 7h10"></path>
-      </svg>
-      <span>Exercises</span>
-    </a>
-    <a class="tab-link" href="stats.html">
-      <svg xmlns="http://www.w3.org/2000/svg" class="icon" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 0 01-2 2v14a2 2 0 01-2 2h-2a2-2 0 01-2-2z"></path>
-      </svg>
-      <span>Stats</span>
-    </a>
-    <a class="tab-link" href="achievements.html">
-      <img src="trophy.png" alt="Trophy Icon" class="trophy-icon">
-      <span>Achievements</span>
-    </a>
-    <a class="tab-link" href="settings.html">
-      <svg xmlns="http://www.w3.org/2000/svg" class="icon" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-        <path fill-rule="evenodd" fill="currentColor" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd"></path>
-      </svg>
-      <span>Settings</span>
-    </a>
+    <!-- Other navigation links here... -->
   </nav>
 
   <div class="content">
@@ -95,15 +68,11 @@
             <input id="sleep" type="number" step="0.1">
           </div>
           <div>
-            <label for="food">Food Item (ID)</label>
-            <input id="food" type="number" placeholder="Enter ingredient ID">
+            <label for="foodSearch">Search Food (e.g. Banana)</label>
+            <input id="foodSearch" type="text" placeholder="Enter food">
           </div>
         </div>
         <button id="submit" onclick="logData()">Submit</button>
-        <div id="editSection" class="hidden">
-          <button id="cancelEdit" onclick="cancelEdit()">Cancel</button>
-          <button id="updateEntry" onclick="editRow()">Update</button>
-        </div>
       </section>
 
       <!-- Fitness Logs Table -->
@@ -117,6 +86,7 @@
               <th>Water Intake (L)</th>
               <th>Sleep (Hours)</th>
               <th>Food</th>
+              <th>Caloric Info</th>
               <th>Delete</th>
             </tr>
           </thead>
@@ -133,128 +103,79 @@
     particlesJS('particles-js', {
       "particles": {
         "number": {
-          "value": 80,
+          "value": 80, 
           "density": {
             "enable": true,
-            "value_area": 800
+            "value_area": 800  
           }
         },
         "color": {
-          "value": "#ffffff"
+          "value": "#ffffff"  
         },
         "shape": {
-          "type": "circle",
+          "type": "circle",  
           "stroke": {
-            "width": 0,
+            "width": 0, 
             "color": "#000000"
-          },
-          "polygon": {
-            "nb_sides": 5
-          }
-        },
-        "opacity": {
-          "value": 0.5,
-          "random": false,
-          "anim": {
-            "enable": true,
-            "speed": 1,
-            "opacity_min": 0.1,
-            "sync": false
           }
         },
         "size": {
-          "value": 3,
-          "random": true,
-          "anim": {
-            "enable": true,
-            "speed": 40,
-            "size_min": 0.1,
-            "sync": false
-          }
-        },
-        "line_linked": {
-          "enable": true,
-          "distance": 150,
-          "color": "#ffffff",
-          "opacity": 0.4,
-          "width": 1
+          "value": 3,  
+          "random": true
         },
         "move": {
           "enable": true,
-          "speed": 6,
-          "direction": "none",
-          "random": false,
-          "straight": false,
-          "out_mode": "out",
-          "bounce": false,
-          "attract": {
-            "enable": false,
-            "rotateX": 600,
-            "rotateY": 1200
-          }
+          "speed": 2,
+          "direction": "none",  
+          "random": true,
+          "out_mode": "out"
         }
-      },
-      "interactivity": {
-        "detect_on": "canvas",
-        "events": {
-          "onhover": {
-            "enable": true,
-            "mode": "repulse"
-          },
-          "onclick": {
-            "enable": true,
-            "mode": "push"
-          }
-        }
-      },
-      "retina_detect": true
+      }
     });
   </script>
 
   <script>
-    // Fetch nutrient data from Spoonacular API
-    async function fetchNutrientInfo(ingredientId, nutrient, targetAmount, unit) {
-      const apiKey = 'b86ae26b7f844ead91ce96df1eb8df0c';
-      const url = `https://api.spoonacular.com/food/ingredients/${ingredientId}/amount?nutrient=${nutrient}&target=${targetAmount}&unit=${unit}&apiKey=${apiKey}`;
+    const apiKey = 'b86ae26b7f844ead91ce96df1eb8df0c';
+    const logsSection = document.getElementById('logsSection');
 
-      try {
-        const response = await fetch(url);
-        const data = await response.json();
-        
-        if (data.nutrient) {
-          console.log(`Amount of ${data.nutrient.name}: ${data.nutrient.amount} ${data.nutrient.unit}`);
-          return data.nutrient; // Return the nutrient data
-        } else {
-          console.error('Nutrient data not available');
-        }
-      } catch (error) {
-        console.error('Error fetching nutrient data:', error);
-      }
-    }
-
-    // Function to log data
-    function logData() {
+    async function logData() {
+      const foodQuery = document.getElementById('foodSearch').value;
       const steps = document.getElementById('steps').value;
       const water = document.getElementById('water').value;
       const sleep = document.getElementById('sleep').value;
-      const foodId = document.getElementById('food').value;
 
-      // Fetch protein content for the food item
-      fetchNutrientInfo(foodId, 'protein', 10, 'oz').then(nutrientData => {
-        if (nutrientData) {
-          const logContainer = document.getElementById('logsSection');
-          const newRow = document.createElement('tr');
-          newRow.innerHTML = `
-            <td>${new Date().toLocaleDateString()}</td>
-            <td>${steps}</td>
-            <td>${water}</td>
-            <td>${sleep}</td>
-            <td>Caloric Info: ${nutrientData.amount} ${nutrientData.unit} of ${nutrientData.name}</td>
-            <td><button>Delete</button></td>
-          `;
-          logContainer.appendChild(newRow);
-        }
-      });
+      // Fetch food details from the Spoonacular API
+      const response = await fetch(`https://api.spoonacular.com/food/ingredients/search?query=${foodQuery}&number=2&sort=calories&sortDirection=desc&apiKey=${apiKey}`);
+      const data = await response.json();
+      
+      if (data.results && data.results.length > 0) {
+        const foodName = data.results[0].name;
+        const calories = data.results[0].nutrition.nutrients.find(nutrient => nutrient.name === "Calories").amount;
+
+        // Insert log entry into table
+        const newRow = document.createElement('tr');
+        newRow.innerHTML = `
+          <td>${new Date().toLocaleDateString()}</td>
+          <td>${steps}</td>
+          <td>${water}</td>
+          <td>${sleep}</td>
+          <td>${foodName}</td>
+          <td>Calories: ${calories}</td>
+          <td><button onclick="deleteLog(this)">Delete</button></td>
+        `;
+        logsSection.appendChild(newRow);
+
+        // Clear inputs
+        document.getElementById('steps').value = '';
+        document.getElementById('water').value = '';
+        document.getElementById('sleep').value = '';
+        document.getElementById('foodSearch').value = '';
+      }
+    }
+
+    function deleteLog(button) {
+      const row = button.closest('tr');
+      row.remove();
     }
   </script>
 </body>
