--- a/index.html
+++ b/index.html
@@ -5,41 +5,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Today | Astronaut Fitness Tracker</title>
   <link rel="stylesheet" href="style.css">
-  <script src="script.js" defer></script>
   <!-- Font Awesome CSS -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <!-- Particles.js Script -->
   <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-
-  <style>
-    /* Ensure particles cover the entire background */
-    #particles-js {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      z-index: -1;
-    }
-
-    /* Content styling to ensure visibility */
-    .content {
-      position: relative;
-      z-index: 1;
-    }
-  </style>
 </head>
 <body>
   <!-- Particles Background -->
   <div id="particles-js"></div>
 
   <nav class="tabbar">
-    <a class="tab-link" href="today.html">Today</a>
-    <a class="tab-link" href="week.html">Week</a>
-    <a class="tab-link" href="exercises.html">Exercises</a>
-    <a class="tab-link" href="stats.html">Stats</a>
-    <a class="tab-link" href="achievements.html">Achievements</a>
-    <a class="tab-link" href="settings.html">Settings</a>
+    <a class="tab-link" href="today.html">
+      <svg xmlns="http://www.w3.org/2000/svg" class="icon" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17.657 18.657A8 8 0 016.343 7.343S7 9 9 10c0-2 .5-5 2.986-7C14 5 16.09 5.777 17.656 7.343A7.975 7.975 0 0120 13a7.975 7.975 0 01-2.343 5.657z"></path>
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9.879 16.121A3 3 0 1012.015 11L11 14H9c0 .768.293 1.536.879 2.121z"></path>
+      </svg>
+      <span>Today</span>
+    </a>
+    <!-- Other navigation links here... -->
   </nav>
 
   <div class="content">
@@ -63,23 +46,18 @@
             <label for="sleep">Sleep (Hours)</label>
             <input id="sleep" type="number" step="0.1">
           </div>
-        </div>
-        <button id="submit">Submit</button>
-      </section>
-
-      <!-- New Section for Food Search -->
-      <section>
-        <h2>Search Foods for Caloric Information</h2>
-        <div class="inputs">
           <div>
-            <label for="foodSearch">Enter Food Item</label>
-            <input id="foodSearch" type="text" placeholder="e.g., Apple">
+            <label for="foodSearch">Search Food (e.g. Banana)</label>
+            <input id="foodSearch" type="text" placeholder="Enter food">
+            <button id="searchFood" onclick="searchFood()">Search</button>
           </div>
         </div>
-        <button id="searchFood">Search</button>
-        <div id="foodResults">
-          <!-- Food results will be displayed here -->
-        </div>
+      </section>
+
+      <!-- Display Search Results -->
+      <section>
+        <h2>Search Results</h2>
+        <ul id="searchResults"></ul>
       </section>
 
       <!-- Fitness Logs Table -->
@@ -92,6 +70,9 @@
               <th>Steps</th>
               <th>Water Intake (L)</th>
               <th>Sleep (Hours)</th>
+              <th>Food</th>
+              <th>Calories</th>
+              <th>Delete</th>
             </tr>
           </thead>
           <tbody id="logsSection">
@@ -107,106 +88,100 @@
     particlesJS('particles-js', {
       "particles": {
         "number": {
-          "value": 80,
+          "value": 80, 
           "density": {
             "enable": true,
-            "value_area": 800
+            "value_area": 800  
           }
         },
         "color": {
-          "value": "#ffffff"
+          "value": "#ffffff"  
         },
         "shape": {
-          "type": "circle"
+          "type": "circle",  
+          "stroke": {
+            "width": 0, 
+            "color": "#000000"
+          }
         },
         "size": {
-          "value": 3,
+          "value": 3,  
           "random": true
         },
         "move": {
           "enable": true,
           "speed": 2,
-          "direction": "none"
+          "direction": "none",  
+          "random": true,
+          "out_mode": "out"
         }
       }
     });
   </script>
 
-  <!-- JavaScript to handle Spoonacular API request -->
+  <!-- JS Script for Search and Logging -->
   <script>
-    const apiKey = 'b86ae26b7f844ead91ce96df1eb8df0c';  // Spoonacular API key
+    const apiKey = 'b86ae26b7f844ead91ce96df1eb8df0c';
+    const logsSection = document.getElementById('logsSection');
+    const searchResults = document.getElementById('searchResults');
 
-    // Fetch food data based on the search query
-    async function fetchFoodId(foodItem) {
-      const url = `https://api.spoonacular.com/food/search?query=${foodItem}&apiKey=${apiKey}&number=1`;
+    // Function to search for food ingredients using the Spoonacular API
+    async function searchFood() {
+      const foodQuery = document.getElementById('foodSearch').value;
+      const response = await fetch(`https://api.spoonacular.com/food/ingredients/search?query=${foodQuery}&number=5&sort=calories&sortDirection=desc&apiKey=${apiKey}`);
+      const data = await response.json();
+      
+      if (data.results && data.results.length > 0) {
+        // Clear the previous search results
+        searchResults.innerHTML = '';
+        
+        // Display new search results
+        data.results.forEach(food => {
+          // Get calories from nutrition info
+          const calories = food.nutrition.nutrients.find(nutrient => nutrient.name === "Calories")?.amount || 'N/A';
 
-      try {
-        const response = await fetch(url);
-        const data = await response.json();
-
-        if (data.results && data.results.length > 0) {
-          return data.results[0].id;  // Return the ID of the first result
-        } else {
-          return null;
-        }
-      } catch (error) {
-        console.error('Error fetching food data:', error);
-        return null;
-      }
-    }
-
-    // Fetch detailed information based on the food ID
-    async function fetchFoodDetails(foodId) {
-      const url = `https://api.spoonacular.com/food/ingredients/${foodId}/information?apiKey=${apiKey}`;
-
-      try {
-        const response = await fetch(url);
-        const data = await response.json();
-
-        return {
-          name: data.name,
-          calories: data.nutrition.nutrients[0].amount,  // Calories per serving
-          servingSize: data.nutrition.nutrients[0].unit,  // Unit of the serving
-          image: data.image,
-          description: data.description  // Optional description of the food
-        };
-      } catch (error) {
-        console.error('Error fetching food details:', error);
-        return null;
-      }
-    }
-
-    document.getElementById('searchFood').addEventListener('click', async () => {
-      const foodSearch = document.getElementById('foodSearch').value;
-      if (!foodSearch) {
-        alert('Please enter a food item.');
-        return;
-      }
-
-      const foodId = await fetchFoodId(foodSearch);
-      if (!foodId) {
-        alert('Food not found.');
-        return;
-      }
-
-      const foodData = await fetchFoodDetails(foodId);
-      const foodResultsContainer = document.getElementById('foodResults');
-      foodResultsContainer.innerHTML = '';  // Clear previous results
-
-      if (foodData) {
-        const foodResult = document.createElement('div');
-        foodResult.classList.add('food-result');
-        foodResult.innerHTML = `
-          <h3>${foodData.name}</h3>
-          <p><strong>Calories:</strong> ${foodData.calories} kcal per ${foodData.servingSize}</p>
-          <p><strong>Description:</strong> ${foodData.description || 'No description available.'}</p>
-          <img src="https://spoonacular.com/recipeImages/${foodData.image}" alt="${foodData.name}" />
-        `;
-        foodResultsContainer.appendChild(foodResult);
+          const foodItem = document.createElement('li');
+          foodItem.innerHTML = `
+            <strong>${food.name}</strong> - Calories: ${calories}
+            <button onclick="logFood('${food.name}', ${food.id}, ${calories})">Log Food</button>
+          `;
+          searchResults.appendChild(foodItem);
+        });
       } else {
-        foodResultsContainer.innerHTML = '<p>No detailed information found for the given food item.</p>';
+        searchResults.innerHTML = 'No results found';
       }
-    });
+    }
+
+    // Function to log the food with calories into the fitness logs
+    async function logFood(foodName, foodId, calories) {
+      const steps = document.getElementById('steps').value;
+      const water = document.getElementById('water').value;
+      const sleep = document.getElementById('sleep').value;
+
+      // Insert log entry into table
+      const newRow = document.createElement('tr');
+      newRow.innerHTML = `
+        <td>${new Date().toLocaleDateString()}</td>
+        <td>${steps}</td>
+        <td>${water}</td>
+        <td>${sleep}</td>
+        <td>${foodName}</td>
+        <td>${calories} kcal</td>
+        <td><button onclick="deleteLog(this)">Delete</button></td>
+      `;
+      logsSection.appendChild(newRow);
+
+      // Clear inputs
+      document.getElementById('steps').value = '';
+      document.getElementById('water').value = '';
+      document.getElementById('sleep').value = '';
+      document.getElementById('foodSearch').value = '';
+    }
+
+    function deleteLog(button) {
+      const row = button.closest('tr');
+      row.remove();
+    }
   </script>
 </body>
 </html>
