--- a/today.html
+++ b/today.html
@@ -5,31 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Today | Astronaut Fitness Tracker</title>
   <link rel="stylesheet" href="style.css">
-  <script src="script.js" defer></script>
   <!-- Font Awesome CSS -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <!-- Particles.js Script -->
   <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-
-  <style>
-    /* Ensure particles cover the entire background */
-    #particles-js {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      z-index: -1;  /* Make sure particles are behind the content */
-    }
-
-    /* Content styling to ensure visibility */
-    .content {
-      position: relative;
-      z-index: 1;  /* Content should appear above particles */
-    }
-  </style>
 </head>
 <body>
   <!-- Particles Background -->
@@ -43,7 +22,12 @@
       </svg>
       <span>Today</span>
     </a>
-    <!-- Other navigation links here... -->
+    <a class="tab-link" href="log.html">
+      <svg xmlns="http://www.w3.org/2000/svg" class="icon" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8L12 4m0 0l9 4m-9-4v16m0 0l9-4m-9 4L3 16"></path>
+      </svg>
+      <span>Logs</span>
+    </a>
   </nav>
 
   <div class="content">
@@ -140,6 +124,7 @@
     });
   </script>
 
+  <!-- JS Script for Search and Logging -->
   <script>
     const apiKey = 'b86ae26b7f844ead91ce96df1eb8df0c';
     const logsSection = document.getElementById('logsSection');
